force-app/main/default/objects/NA_Risk_Matrix__mdt/NA_Risk_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>NA Risk Matrix</label>
    <pluralLabel>NA Risk Matrixes</pluralLabel>
</CustomObject>