force-app/main/default/objects/NA_Risk_Matrix__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social &amp; Political</fullName>
            </value>
            <value>
                <fullName>Crime &amp; Security</fullName>
            </value>
            <value>
                <fullName>Conflict</fullName>
            </value>
            <value>
                <fullName>Terrorism</fullName>
            </value>
            <value>
                <fullName>Kidnap</fullName>
            </value>
            <value>
                <fullName>Humanitarian Space</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>