force-app/main/default/objects/NA_Risk_Matrix__mdt/fields/Description_English__c.field-meta.xml
<CustomField>
    <fullName>Description_English__c</fullName>
    <label>Description English</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>