force-app/main/default/objects/NA_Risk_Matrix__mdt/fields/Description_French__c.field-meta.xml
<CustomField>
    <fullName>Description_French__c</fullName>
    <label>Description French</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>