force-app/main/default/objects/NA_Risk_Matrix__mdt/fields/Description_Russian__c.field-meta.xml
<CustomField>
    <fullName>Description_Russian__c</fullName>
    <label>Description Russian</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>