force-app/main/default/objects/NA_Risk_Matrix__mdt/fields/Description_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Description_Spanish__c</fullName>
    <label>Description Spanish</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>